# real_estate_service

./: Dockerfile  README.md  config.py  constants.py  data.csv  main.py  pyproject.toml  pytest.ini  server.py
admin/: __init__.py  models.py
app/: __init__.py  api_views.py  forms.py  models.py  routers.py
app/templates/: 404.html  500.html  base.html  index.html  ping.html  query.html  result.html
errors/: __init__.py  error_handlers.py
migrations/: env.py
migrations/versions/: 0eeb91ac4329_changes.py  1cf3c07e054e_changes_fields.py  258326e24a99_first_migration.py  2de816c9ee54_changes_two_fields.py  7ede255b7202_create_building_table.py  f5891dcaa098_chang.py
tests/: conftest.py  test_database.py  test_endpoints.py  test_routers.py  test_views.py
